--- a/apply.html
+++ b/apply.html
@@ -22,7 +22,7 @@
     .timeline-number { background: #0d1b3e; color: #f5c518; }
     /* hero background (same as index) */
     .hero-bg {
-      background-image: url('https://images.unsplash.com/photo-1523050854058-8df90110c9f1?q=80&w=2070&auto=format&fit=crop');
+      background-image: url('img/apply.png');
       background-attachment: fixed;
       background-size: cover;
       background-position: center;
@@ -305,3 +305,4 @@
   </script>
 </body>
 </html>
+
