--- a/stories.html
+++ b/stories.html
@@ -23,7 +23,7 @@
 
     /* hero background (same as index & about) */
     .hero-bg {
-      background-image: url('https://images.unsplash.com/photo-1523050854058-8df90110c9f1?q=80&w=2070&auto=format&fit=crop');
+      background-image: url('img/student.png');
       background-attachment: fixed;
       background-size: cover;
       background-position: center;
@@ -292,3 +292,4 @@
   </script>
 </body>
 </html>
+
