--- a/programs.html
+++ b/programs.html
@@ -24,7 +24,7 @@
 
     /* hero background (same as index & about) */
     .hero-bg {
-      background-image: url('https://images.unsplash.com/photo-1523050854058-8df90110c9f1?q=80&w=2070&auto=format&fit=crop');
+      background-image: url('img/program.png');
       background-attachment: fixed;
       background-size: cover;
       background-position: center;
@@ -458,3 +458,4 @@
   </script>
 </body>
 </html>
+
