--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
 
     /* hero background (same as index) */
     .hero-bg {
-      background-image: url('https://images.unsplash.com/photo-1523050854058-8df90110c9f1?q=80&w=2070&auto=format&fit=crop');
+      background-image: url('img/about.png');
       background-attachment: fixed;
       background-size: cover;
       background-position: center;
@@ -341,3 +341,4 @@
   </script>
 </body>
 </html>
+
