--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       background-position: center;
     }
     .story-img {
-      background-image: url('https://images.unsplash.com/photo-1485546246426-74dc88dec4d9?q=80&w=2069&auto=format&fit=crop'); /* placeholder kids */
+      background-image: url('img/story.png'); /* placeholder kids */
       background-size: cover;
       background-position: center;
     }
@@ -413,6 +413,7 @@
   </script>
 </body>
 </html>
+
 
 
 
