--- a/index.html
+++ b/index.html
@@ -81,7 +81,8 @@
 
         <!-- right side buttons -->
         <div class="flex items-center gap-2 flex-shrink-0">
-          <button class="inline-flex items-center justify-center gap-2 whitespace-nowrap transition-all bg-[#f5c518] text-[#0d1b3e] hover:bg-[#f5c518]/90 font-semibold rounded-full px-5 h-9 text-sm shadow-md">Apply Now</button>
+          <!-- Apply Now button now links to apply.html -->
+          <a href="apply.html" class="inline-flex items-center justify-center gap-2 whitespace-nowrap transition-all bg-[#f5c518] text-[#0d1b3e] hover:bg-[#f5c518]/90 font-semibold rounded-full px-5 h-9 text-sm shadow-md">Apply Now</a>
           <!-- mobile toggle (chevron) -->
           <button id="menuToggle" type="button" aria-label="Toggle menu" class="lg:hidden flex items-center justify-center w-9 h-9 rounded-full border-2 cursor-pointer transition-colors hover:bg-white/10 border-white/50 text-white">
             <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round" class="transition-transform duration-300" id="chevronIcon">
@@ -123,15 +124,17 @@
             Pathways is a youth education and leadership initiative providing training, mentorship, and opportunities for students.
           </p>
           <div class="flex flex-col sm:flex-row items-center justify-center gap-3 pt-4">
-            <button class="inline-flex items-center justify-center gap-2 bg-[#f5c518] text-[#0d1b3e] hover:bg-[#f5c518]/90 font-semibold rounded-full px-7 h-11 text-sm group shadow-lg">
+            <!-- Apply Now button (hero) -->
+            <a href="apply.html" class="inline-flex items-center justify-center gap-2 bg-[#f5c518] text-[#0d1b3e] hover:bg-[#f5c518]/90 font-semibold rounded-full px-7 h-11 text-sm group shadow-lg">
               Apply Now
               <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="ml-2 h-4 w-4 group-hover:translate-x-1 transition-transform">
                 <path d="M5 12h14"></path><path d="m12 5 7 7-7 7"></path>
               </svg>
-            </button>
-            <button class="inline-flex items-center justify-center gap-2 font-medium rounded-full px-7 h-11 text-sm border-2 border-white/50 text-white bg-white/10 hover:bg-white/20 backdrop-blur-sm">
+            </a>
+            <!-- Support Pathways button (hero) -->
+            <a href="support.html" class="inline-flex items-center justify-center gap-2 font-medium rounded-full px-7 h-11 text-sm border-2 border-white/50 text-white bg-white/10 hover:bg-white/20 backdrop-blur-sm">
               Support Pathways
-            </button>
+            </a>
           </div>
         </div>
 
@@ -232,10 +235,11 @@
         </div>
 
         <div class="text-center">
-          <button class="inline-flex items-center justify-center gap-2 bg-[#0d1b3e] text-[#f5c518] hover:bg-[#0d1b3e]/90 rounded-full px-8 h-10 text-sm group">
+          <!-- View All Programs button -->
+          <a href="programs.html" class="inline-flex items-center justify-center gap-2 bg-[#0d1b3e] text-[#f5c518] hover:bg-[#0d1b3e]/90 rounded-full px-8 h-10 text-sm group">
             View All Programs
             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="ml-2 h-5 w-5 group-hover:translate-x-1 transition-transform"><path d="M5 12h14"></path><path d="m12 5 7 7-7 7"></path></svg>
-          </button>
+          </a>
         </div>
       </div>
     </section>
@@ -321,10 +325,11 @@
         </div>
 
         <div class="text-center">
-          <button class="inline-flex items-center justify-center gap-2 text-sm font-medium rounded-full px-10 h-10 border-2 border-[#0d1b3e] text-[#0d1b3e] bg-transparent hover:bg-[#0d1b3e] hover:text-white group transition-all">
+          <!-- Read More Stories button -->
+          <a href="stories.html" class="inline-flex items-center justify-center gap-2 text-sm font-medium rounded-full px-10 h-10 border-2 border-[#0d1b3e] text-[#0d1b3e] bg-transparent hover:bg-[#0d1b3e] hover:text-white group transition-all">
             Read More Stories
             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="ml-2 h-5 w-5 group-hover:translate-x-1 transition-transform"><path d="M5 12h14"></path><path d="m12 5 7 7-7 7"></path></svg>
-          </button>
+          </a>
         </div>
       </div>
     </section>
@@ -341,11 +346,13 @@
             <p class="text-sm text-[#0d1b3e]/70 max-w-xl mx-auto text-balance leading-relaxed">Your support helps us reach more young people, fund more programmes, and build a stronger Zambia. Every contribution — big or small — changes a life.</p>
           </div>
           <div class="flex flex-col sm:flex-row items-center justify-center gap-3 pt-2">
-            <button class="inline-flex items-center justify-center gap-2 bg-[#0d1b3e] text-[#f5c518] hover:bg-[#0d1b3e]/90 font-semibold rounded-full px-8 h-10 text-sm group shadow-lg">
+            <!-- Donate Now button -->
+            <a href="support.html#donate" class="inline-flex items-center justify-center gap-2 bg-[#0d1b3e] text-[#f5c518] hover:bg-[#0d1b3e]/90 font-semibold rounded-full px-8 h-10 text-sm group shadow-lg">
               Donate Now
               <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="ml-2 h-4 w-4 group-hover:translate-x-1 transition-transform"><path d="M5 12h14"></path><path d="m12 5 7 7-7 7"></path></svg>
-            </button>
-            <button class="inline-flex items-center justify-center gap-2 font-medium rounded-full px-8 h-10 text-sm border-2 border-[#0d1b3e] text-[#0d1b3e] bg-transparent hover:bg-[#0d1b3e] hover:text-white transition-all">Become a Partner</button>
+            </a>
+            <!-- Become a Partner button -->
+            <a href="support.html#partner" class="inline-flex items-center justify-center gap-2 font-medium rounded-full px-8 h-10 text-sm border-2 border-[#0d1b3e] text-[#0d1b3e] bg-transparent hover:bg-[#0d1b3e] hover:text-white transition-all">Become a Partner</a>
           </div>
           <p class="text-sm text-[#0d1b3e]/50">Pathways is an initiative of RISE Ubuntu, a registered non-profit in Zambia.</p>
         </div>
@@ -413,8 +420,3 @@
   </script>
 </body>
 </html>
-
-
-
-
-
